--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true }
-				]
+        ],
+        transition: 'concave'
 			});
 		</script>
 	</body>
